<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragment_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
        android:id="@+id/btnLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_lower_main_tab"/>

    <Button
        android:id="@+id/btnUpper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLower"
        android:layout_centerHorizontal="true"
        android:text="@string/button_upper_main_tab"/>

    <ImageView
        android:id="@+id/iv_main_fragment"
        android:layout_width="200dp"

        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/image_view_cnt_descr_main_tab"/>

    <Button
        android:id="@+id/btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnUpper"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/btn_new_main_tab"
        />

    <Button
        android:id="@+id/btn_retro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnUpper"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_retro_main_tab"
        />

</RelativeLayout>